<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.1</version>
        <relativePath/>
    </parent>

    <groupId>com.linkroa</groupId>
    <artifactId>deepdataagent-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>DeepDataAgent Parent</name>
    <description>Parent build for the DeepDataAgent multi-module application.</description>

    <modules>
        <module>core</module>
    </modules>

    <properties>
        <revision>0.1.0</revision>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>${java.version}</maven.compiler.release>

        <agentscope.version>2.0.3</agentscope.version>
        <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
        <frontend-maven-plugin.version>2.0.0</frontend-maven-plugin.version>
        <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
        <node.version>v24.14.1</node.version>
        <npm.version>11.6.0</npm.version>
        <vue.version>3.5.21</vue.version>
        <vite.version>7.1.4</vite.version>
        <vue-router.version>4.6.3</vue-router.version>
        <pinia.version>3.0.3</pinia.version>
        <typescript.version>5.9.3</typescript.version>
        <vite-plugin-vue.version>6.0.1</vite-plugin-vue.version>
        <vue-tsc.version>3.1.0</vue-tsc.version>
        <tdesign-vue-next.version>1.16.1</tdesign-vue-next.version>
        <tdesign-chat.version>0.4.5</tdesign-chat.version>
        <jacoco.version>0.8.14</jacoco.version>
        <mockito.version>5.23.0</mockito.version>
        <json-path.version>3.0.0</json-path.version>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <org.apache.commons-lang3.version>3.20.0</org.apache.commons-lang3.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <clickhouse-jdbc.version>0.9.8</clickhouse-jdbc.version>
        <jjwt.version>0.12.6</jjwt.version>
        <bcrypt.version>0.10.2</bcrypt.version>
        <!-- Redisson 核心库（协调租约 Redis 存储）：Boot 4 兼容线 ≥4.6.1，首选 4.7.0；不引 starter（避免自动配置冲突） -->
        <redisson.version>4.7.0</redisson.version>
        <software.amazon.awssdk>2.53.2</software.amazon.awssdk>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>com.github.eirslett</groupId>
                    <artifactId>frontend-maven-plugin</artifactId>
                    <version>${frontend-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <inherited>false</inherited>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten-clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
